--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -21,6 +21,7 @@
 /*--------------------------------------------------------------
 # Imports
 --------------------------------------------------------------*/
+@import "fonts.css";
 @import "custom-media.css";
 @import "custom-properties.css";
 @import "reset.css";
