--- a/assets/css/src/editor/editor-styles.css
+++ b/assets/css/src/editor/editor-styles.css
@@ -20,6 +20,7 @@
 	font-size: var(--font-size-regular);
 	/* stylelint-enable */
 	line-height: var(--global-font-line-height);
+	font-weight: var(--global-font-weight);
 }
 
 .editor-post-title__block .editor-post-title__input,
