--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -5,6 +5,7 @@
    # Custom media
    # Custom properties
    # Normalize
+   # Footer
 # Accessibility
 # Layout
 # Typography
@@ -14,7 +15,6 @@
 # Header
   # Main navigation menu
 # Content navigation
-# Footer
 # Infinite scroll
 --------------------------------------------------------------*/
 
@@ -25,6 +25,7 @@
 @import "custom-media.css";
 @import "custom-properties.css";
 @import "reset.css";
+@import "footer.css";
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -753,19 +754,6 @@ select {
 
 .pagination .current {
 	border-color: var(--global-font-color);
-}
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-.site-footer {
-	margin: 1em 0 0;
-	padding: 2em 0;
-	font-family: var(--highlight-font-family);
-}
-
-.site-info {
-	text-align: center;
 }
 
 /*--------------------------------------------------------------
