Making sure white toggles are white for main dropdown nav

--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -533,6 +533,10 @@ select {
 		transform: translateY(-50%) rotate(45deg);
 	}
 
+	.nav--toggle-sub.nav--toggle-white .dropdown-symbol {
+		border-color: #fff;
+	}
+
 	.nav--toggle-sub ul ul .dropdown,
 	.nav--toggle-sub ul ul .dropdown-toggle {
 		top: 40%;
