--- a/assets/css/src/custom-properties.css
+++ b/assets/css/src/custom-properties.css
@@ -7,11 +7,11 @@
 
 :root {
 	--global-font-color: #333;
-	--global-font-family: "Gotham", sans-serif;
+	--global-font-family: Gotham, sans-serif;
 	--global-font-size: 19;
 	--global-font-line-height: 2.3;
 	--global-font-weight: 300;
-	--highlight-font-family: "Gotham", sans-serif;
+	--highlight-font-family: Gotham, sans-serif;
 	--content-width: 45rem;
 	--dropdown-symbol-width: 0.7em;
 
