--- a/assets/css/src/fonts.css
+++ b/assets/css/src/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
-	font-family: 'Gotham';
-	src: url('../fonts/Gotham-Book.otf') format('opentype');
+	font-family: Gotham;
+	src: url(../fonts/Gotham-Book.otf) format('opentype');
 }
