Rename fonts file to _fonts.css

--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -21,7 +21,7 @@
 /*--------------------------------------------------------------
 # Imports
 --------------------------------------------------------------*/
-@import "fonts.css";
+@import "_fonts.css";
 @import "_custom-media.css";
 @import "_custom-properties.css";
 @import "_reset.css";
