--- a/assets/css/src/_fonts.css
+++ b/assets/css/src/_fonts.css
@@ -1,4 +1,20 @@
 @font-face {
 	font-family: Gotham;
 	src: url(../fonts/Gotham-Book.otf) format('opentype');
+	font-weight: normal;
+}
+@font-face {
+	font-family: Gotham;
+	src: url(../fonts/Gotham-Book.otf) format('opentype');
+	font-weight: 400;
+}
+@font-face {
+	font-family: Gotham;
+	src: url(../fonts/Gotham-Bold.otf) format('opentype');
+	font-weight: bold;
+}
+@font-face {
+	font-family: Gotham;
+	src: url(../fonts/Gotham-Bold.otf) format('opentype');
+	font-weight: 600;
 }
