--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -107,7 +107,12 @@
 .entry-footer {
 	clear: both;
 	padding: 1.5em 1.5rem 3em;
-	border-bottom: 1px solid #111;
+	border-top: 1px solid #111;
+}
+
+.entry-footer .entry-taxonomies .term-links {
+	display: block;
+	font-size: 1.5em;
 }
 
 @media (--content-query) {
