--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -13,27 +13,23 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-# Post and page content
---------------------------------------------------------------*/
-
-/* Custom rule  for sticky posts:
-.sticky {
-
-}
-*/
-
-/*--------------------------------------------------------------
 # Imports
 --------------------------------------------------------------*/
 @import "_custom-media.css";
 
+/*--------------------------------------------------------------
+# Post and page content
+--------------------------------------------------------------*/
+
 .entry {
-	margin-bottom: 1rem;
+	margin-bottom: 2rem;
+	border-bottom: var(--highlight-border-width) var(--highlight-border-style) var(--nyu-primary);
+	padding: 1rem 0 2rem;
 }
 
 .entry-meta {
 	font-family: var(--highlight-font-family);
-	margin: 1em 0;
+	margin: 0 0 1em;
 }
 
 .entry-meta .posted-by,
@@ -73,6 +69,12 @@
 	margin: 1.5em auto;
 }
 
+.single .entry,
+.page .entry {
+	border-bottom: 0;
+	padding: 0;
+}
+
 @media (--content-query) {
 
 	.page-content > *,
@@ -103,8 +105,9 @@
 	clear: both;
 	font-family: var(--highlight-font-family);
 	font-size: 80%;
-	padding: 1.5em 0 3em;
+	padding: 1.5em 0 0;
 	border-top: 1px solid #111;
+	margin-bottom: 0;
 }
 
 .entry-footer span {
