--- a/assets/css/src/sidebar.css
+++ b/assets/css/src/sidebar.css
@@ -10,12 +10,12 @@
 .primary-sidebar {
 	padding: 1rem 0;
 	font-family: var(--highlight-font-family);
-	border-top: 5px solid var(--nyu-primary);
+	border-top: var(--highlight-border-width) var(--highlight-border-style) var(--nyu-primary);
 }
 
 .primary-sidebar .widget {
 	padding: 0 var(--grid-side-margin-small) 1em;
-	border-bottom: 5px solid var(--nyu-primary);
+	border-bottom: var(--highlight-border-width) var(--highlight-border-style) var(--nyu-primary);
 }
 
 @media (--sidebar-query) {
