--- a/assets/css/src/_custom-media.css
+++ b/assets/css/src/_custom-media.css
@@ -10,5 +10,6 @@
 @custom-media --wide-menu-query screen and (min-width: 37.5em);
 @custom-media --content-query screen and (min-width: 48em);
 @custom-media --sidebar-query screen and (min-width: 60em);
+@custom-media --content-full-query screen and (min-width: 60em);
 @custom-media --footer-query screen and (min-width: 48em);
 /* stylelint-enable */
