--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -471,13 +471,103 @@ select {
 	border: 1px solid #ccc;
 }
 
+.site-title {
+	margin: 0;
+	font-family: var(--highlight-font-family);
+	font-size: 38px;
+	font-weight: 700;
+	line-height: 1.2;
+	color: inherit;
+}
+
+.site-title a {
+	text-decoration: none;
+	color: inherit;
+}
+
+/*--------------------------------------------------------------
+## Main navigation menu
+--------------------------------------------------------------*/
+.main-navigation {
+	clear: both;
+	display: block;
+	font-family: var(--highlight-font-family);
+}
+
+.main-navigation a {
+	display: block;
+	width: 100%;
+	padding: 0.5em 1em 0.5em 0;
+	text-decoration: none;
+	color: inherit;
+}
+
+.main-navigation a:hover,
+.main-navigation a:focus {
+	text-decoration: underline;
+}
+
+.main-navigation ul {
+	display: block;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.secondary-navigation {
+	display: none;
+	color: #000;
+}
+
+.secondary-navigation ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.secondary-navigation .menu a {
+	color: inherit;
+	text-decoration: none;
+}
+
+.secondary-navigation .menu a:hover,
+.secondary-navigation .menu a:focus,
+.secondary-navigation .menu a:active {
+	text-decoration: underline;
+}
+
+.main-navigation ul ul li,
+.secondary-navigation ul ul li {
+	padding-left: 1em;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 
+.site-branding {
+	text-align: left;
+}
+
 .site-header {
 	background: var(--nyu-primary);
 	color: #fff;
+	padding: 1rem 0;
+}
+
+.site-header .site-header-container {
+	display: flex;
+	align-items: center;
+	margin: 0 var(--grid-side-margin);
+}
+
+.site-header .site-header-container .main-navigation {
+	order: 1;
+	margin: 0 0.75em 0 0;
+}
+
+.site-header .site-header-container .site-branding {
+	order: 2;
 }
 
 .header-image {
@@ -494,25 +584,6 @@ select {
 	margin: 0 auto 1em;
 }
 
-.site-branding {
-	text-align: center;
-	padding: 60px 0 1.75em;
-}
-
-.site-title {
-	margin: 0 1em;
-	font-family: var(--highlight-font-family);
-	font-size: 38px;
-	font-weight: 700;
-	line-height: 1.2;
-	color: #333332;
-}
-
-.site-title a {
-	text-decoration: none;
-	color: inherit;
-}
-
 .site-description {
 	margin: 0.4375em 0 0;
 	font-family: var(--highlight-font-family);
@@ -523,21 +594,80 @@ select {
 	color: #757575;
 }
 
+@media (--narrow-menu-query) {
+
+	.site-header.nav--toggled-on {
+		background: #fff;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		padding: 0;
+		margin: 0;
+		overflow: scroll;
+	}
+
+	.site-header.nav--toggled-on .site-header-container {
+		display: block;
+		margin: 0;
+		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	}
+
+	.site-header.nav--toggled-on .site-branding {
+		background: var(--nyu-primary);
+		border-bottom: 2px solid #fff;
+	}
+
+	.site-header.nav--toggled-on nav a {
+		display: block;
+		padding: 0 1.5rem 0 0;
+		border-bottom: 2px solid #c1c1c1;
+	}
+
+	body.nav-site-navigation--toggled-on {
+		overflow: hidden;
+	}
+
+	body.nav-site-navigation--toggled-on .secondary-navigation,
+	body.nav-site-navigation--toggled-on .secondary-navigation .menu {
+		display: block;
+	}
+
+	body.nav-site-navigation--toggled-on .secondary-navigation {
+		background: #fff;
+		padding: 0.5rem 0 1.5rem 1.5rem;
+	}
+
+	.site-header.nav--toggled-on .main-navigation {
+		background: var(--nyu-primary);
+		margin: 0;
+		padding: 1.5rem 0 1.5rem 1.5rem;
+	}
+
+	.site-header.nav--toggled-on nav.main-navigation a {
+		border-bottom-color: #8135a8;
+	}
+}
+
+@media (--wide-menu-query) {
+
+	.site-header {
+		padding: 2rem 0;
+	}
+
+	.site-header .site-header-container .main-navigation {
+		order: initial;
+	}
+
+	.site-header .site-header-container .site-branding {
+		order: initial;
+	}
+}
+
 /*--------------------------------------------------------------
 ## Basic navigation menus - handles submenu and small screen toggle
 --------------------------------------------------------------*/
-.nav--toggle-small .menu-toggle {
-	display: block;
-	margin: 1.2em auto;
-	padding: 0.6em 1.2em 0.5em;
-	font-family: var(--highlight-font-family);
-	font-size: 80%;
-	text-transform: uppercase;
-	border: 2px solid #000;
-	border-radius: 0;
-	background: transparent;
-}
-
 .nav--toggle-small .menu {
 	display: none;
 }
@@ -548,6 +678,56 @@ select {
 }
 
 @media (--narrow-menu-query) {
+
+	.nav--toggle-small .menu-toggle {
+		display: block;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		background: transparent;
+	}
+
+	.nav--toggle-small .menu-toggle-icon {
+		display: block;
+		width: 25px;
+		height: 24px;
+		cursor: pointer;
+		position: relative;
+	}
+
+	.nav--toggle-small .menu-toggle-bar {
+		background: #fff;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 5px;
+		margin: 0;
+		opacity: 1;
+		transition: all 200ms ease-out;
+	}
+
+	.nav--toggle-small .menu-toggle-bar:first-child {
+		margin-top: 9px;
+	}
+
+	.nav--toggle-small .menu-toggle-bar:last-child {
+		margin-top: 18px;
+	}
+
+	.site-header {
+		position: relative;
+	}
+
+	.site-header .site-branding {
+		padding-left: 1.5em;
+	}
+
+	.main-navigation .menu-toggle {
+		position: absolute;
+		left: var(--grid-side-margin);
+		top: 4em;
+	}
 
 	.nav--toggle-small.nav--toggled-on .menu {
 		display: block;
@@ -649,60 +829,60 @@ select {
 	}
 }
 
-/*--------------------------------------------------------------
-## Main navigation menu
---------------------------------------------------------------*/
-.main-navigation {
-	clear: both;
-	display: block;
-	margin: 0 auto 2em;
-	padding: 0 1em;
-	/* stylelint-disable */
-	max-width: var(--content-width);
-	/* stylelint-enable */
-	font-family: var(--highlight-font-family);
-}
-
-.main-navigation a {
-	display: block;
-	width: 100%;
-	padding: 0.5em 1em 0.5em 0;
-	text-decoration: none;
-	color: #000;
-}
-
-.main-navigation a:hover,
-.main-navigation a:focus {
-	text-decoration: underline;
-}
-
-.main-navigation ul {
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-.main-navigation ul ul li {
-	padding-left: 1em;
-}
-
 @media (--wide-menu-query) {
 
-	.main-navigation ul li a {
-		padding: 0.4em 0.5em;
+	.main-navigation {
+		flex: 1;
+	}
+
+	.secondary-navigation {
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 60px;
+		padding: 0.5rem var(--grid-side-margin);
 	}
 
 	.main-navigation ul li {
 		margin: 0 0 0 0.5em;
 	}
 
+	.secondary-navigation .menu li {
+		margin: 0 1.5rem 0 0;
+	}
+
 	.main-navigation ul li:first-child {
 		margin-left: 0;
 	}
 
+	.main-navigation ul li a {
+		padding: 0.4em 0.5em;
+	}
+
 	.main-navigation ul ul a {
 		width: 200px;
+		color: #222;
+	}
+
+	.main-navigation ul ul li a {
+		width: 218px;
+		background: none;
+	}
+
+	.secondary-navigation .menu {
+		display: flex;
+		align-items: center;
+		height: 60px;
+	}
+
+	.secondary-navigation li.menu-item--has-toggle a {
+		padding-right: 0.5em;
+	}
+
+	body.has-nav-secondary {
+		padding-top: 60px;
 	}
 
 	/* stylelint-disable */
@@ -711,11 +891,6 @@ select {
 		margin-left: 0;
 	}
 	/* stylelint-enable */
-
-	.main-navigation ul ul li a {
-		width: 218px;
-		background: none;
-	}
 
 	.main-navigation ul ul ul {
 		top: 0;
@@ -726,7 +901,7 @@ select {
 	.main-navigation .menu {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: center;
+		justify-content: flex-end;
 	}
 }
 
