Make sure WP admin bar doesnt cover secondary menu

--- a/assets/css/src/_custom-properties.css
+++ b/assets/css/src/_custom-properties.css
@@ -46,6 +46,9 @@
 	--font-size-large: calc(36 / var(--global-font-size) * 1rem);
 	--font-size-larger: calc(48 / var(--global-font-size) * 1rem);
 
+	/* WordPress properties */
+	--wp-admin-bar-height: 32px;
+
 	/* NYU custom layout */
 	--grid-side-margin: calc((100% - var(--content-width)) / 8);
 	--grid-side-margin-small: 2rem;
