--- a/assets/css/src/magazine.css
+++ b/assets/css/src/magazine.css
@@ -1,6 +1,6 @@
 .site-magazine {
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 1fr 1fr;
 	grid-template-rows: auto auto auto;
 	grid-column-gap: 3rem;
 	grid-row-gap: 1rem;
@@ -18,4 +18,12 @@
 .site-magazine .entry:first-child {
 	grid-row-start: 1;
 	grid-row-end: 4;
+}
+
+@media (--content-full-query) {
+
+	.site-magazine {
+		margin-left: var(--grid-side-margin);
+		margin-right: var(--grid-side-margin);
+	}
 }
