--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -126,6 +126,16 @@
 		justify-content: center;
 	}
 
+	.has-sidebar--left .site {
+		grid-template-columns: var(--grid-side-margin) 1fr var(--grid-gap) 3fr var(--grid-side-margin);
+		grid-template-areas:
+			"header header header header header"
+			". magazine magazine magazine ."
+			"hero hero hero hero hero"
+			". sidebar . main ."
+			"footer footer footer footer footer";
+	}
+
 	.has-sidebar .site-hero {
 		grid-area: hero;
 	}
