--- a/assets/css/src/_custom-properties.css
+++ b/assets/css/src/_custom-properties.css
@@ -7,11 +7,11 @@
 
 :root {
 	--global-font-color: #333;
-	--global-font-family: Gotham, sans-serif;
+	--global-font-family: gotham, sans-serif;
 	--global-font-size: 17;
 	--global-font-line-height: 1.8;
 	--global-font-weight: 400;
-	--highlight-font-family: Gotham, sans-serif;
+	--highlight-font-family: gotham, sans-serif;
 	--content-width: 10rem;
 	--dropdown-symbol-width: 0.7em;
 
