--- a/assets/css/src/_fonts.css
+++ b/assets/css/src/_fonts.css
@@ -1,25 +1,17 @@
 @font-face {
 	font-family: Gotham;
-	src: url(../fonts/Gotham-Book.otf) format('opentype');
-	font-weight: normal;
-}
-@font-face {
-	font-family: Gotham;
-	src: url(../fonts/Gotham-Book.otf) format('opentype');
+	src: url(../fonts/Gotham-Book.otf) format("opentype");
 	font-weight: 400;
 }
+
 @font-face {
 	font-family: Gotham;
-	src: url(../fonts/Gotham-Bold.otf) format('opentype');
-	font-weight: bold;
-}
-@font-face {
-	font-family: Gotham;
-	src: url(../fonts/Gotham-Bold.otf) format('opentype');
+	src: url(../fonts/Gotham-Bold.otf) format("opentype");
 	font-weight: 600;
 }
+
 @font-face {
 	font-family: Gotham;
-	src: url(../fonts/Gotham-Light.otf) format('opentype');
+	src: url(../fonts/Gotham-Light.otf) format("opentype");
 	font-weight: 300;
 }
