Adding post thumbnail CSS

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -51,7 +51,9 @@
 }
 
 .post-thumbnail img {
-	margin: 0 auto;
+	width: 40%;
+	float: left;
+	margin: 0 1.5em 1em 0;
 }
 
 .page-content,
@@ -83,6 +85,11 @@
 }
 
 @media (--content-query) {
+
+	.post-thumbnail img {
+		width: 30%;
+		margin: 0 1.5em 1.5em 0;
+	}
 
 	.page-content > *,
 	.entry-content > *,
