--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -47,7 +47,6 @@
 
 .screen-reader-text:focus {
 	background-color: #f1f1f1;
-	border-radius: 3px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	clip: auto !important;
 	color: #21759b;
@@ -64,9 +63,12 @@
 	z-index: 100000; /* Above WP toolbar. */
 }
 
-/* Do not show the outline on the skip link target. */
-#primary[tabindex="-1"]:focus {
-	outline: 0;
+*:focus,
+input:focus,
+select:focus,
+button:focus {
+	outline: 3px solid #3dbbdb;
+	overflow: -moz-hidden-unscrollable;
 }
 
 /*--------------------------------------------------------------
