Set link color to NYU Purple

--- a/assets/css/src/_custom-properties.css
+++ b/assets/css/src/_custom-properties.css
@@ -31,9 +31,9 @@
 	--color-custom-daylight: #97c0b7;
 	--color-custom-sun: #eee9d1;
 
-	--color-link: #0073aa;
-	--color-link-visited: #333;
-	--color-link-active: #00a0d2;
+	--color-link: #57068c;
+	--color-link-visited: #57068c;
+	--color-link-active: #57068c;
 
 	--color-footer-bg: #220336;
 
