--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -277,8 +277,6 @@ select {
 ## Main navigation menu
 --------------------------------------------------------------*/
 .main-navigation {
-	clear: both;
-	display: block;
 	font-family: var(--highlight-font-family);
 }
 
@@ -327,7 +325,11 @@ select {
 
 .main-navigation ul ul li,
 .secondary-navigation ul ul li {
-	padding-left: 1em;
+	padding-left: 1.5em;
+}
+
+.main-navigation ul ul ul {
+	font-style: italic;
 }
 
 /*--------------------------------------------------------------
@@ -345,18 +347,11 @@ select {
 }
 
 .site-header .site-header-container {
-	display: flex;
+	display: grid;
+	justify-items: stretch;
 	align-items: center;
-	margin: 0 var(--grid-side-margin);
-}
-
-.site-header .site-header-container .main-navigation {
-	order: 1;
-	margin: 0 0.75em 0 0;
-}
-
-.site-header .site-header-container .site-branding {
-	order: 2;
+	grid-column-gap: 0;
+	grid-row-gap: 0;
 }
 
 .header-image {
@@ -383,106 +378,24 @@ select {
 
 @media (--narrow-menu-query) {
 
-	.site-header.nav--toggled-on {
-		background: #fff;
-		position: fixed;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		padding: 0;
-		margin: 0;
-		overflow: scroll;
-	}
-
-	.site-header.nav--toggled-on .site-header-container {
+	button.nav-toggle {
 		display: block;
-		margin: 0;
-		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	}
-
-	.site-header.nav--toggled-on .site-branding {
-		background: var(--nyu-primary);
-		border-bottom: 2px solid #fff;
-	}
-
-	.site-header.nav--toggled-on nav a {
-		display: block;
-		padding: 0 1.5rem 0 0;
-		border-bottom: 2px solid #c1c1c1;
-	}
-
-	body.nav-site-navigation--toggled-on {
-		overflow: hidden;
-	}
-
-	body.nav-site-navigation--toggled-on .secondary-navigation,
-	body.nav-site-navigation--toggled-on .secondary-navigation .menu {
-		display: block;
-	}
-
-	body.nav-site-navigation--toggled-on .secondary-navigation {
-		background: #fff;
-		padding: 0.5rem 0 1.5rem 1.5rem;
-	}
-
-	.site-header.nav--toggled-on .main-navigation {
-		background: var(--nyu-primary);
-		margin: 0;
-		padding: 1.5rem 0 1.5rem 1.5rem;
-	}
-
-	.site-header.nav--toggled-on nav.main-navigation a {
-		border-bottom-color: #8135a8;
-	}
-}
-
-@media (--wide-menu-query) {
-
-	.site-header {
-		padding: 2.25em 0;
-	}
-
-	.site-header .site-header-container .main-navigation {
-		order: initial;
-	}
-
-	.site-header .site-header-container .site-branding {
-		order: initial;
-	}
-}
-
-/*--------------------------------------------------------------
-## Basic navigation menus - handles submenu and small screen toggle
---------------------------------------------------------------*/
-.nav--toggle-small .menu {
-	display: none;
-}
-
-.nav--toggle-sub .dropdown,
-.nav--toggle-sub .dropdown-toggle {
-	display: none;
-}
-
-@media (--narrow-menu-query) {
-
-	.nav--toggle-small .menu-toggle {
-		display: block;
+		width: var(--nav-toggle-width);
 		margin: 0;
 		padding: 0;
 		border: 0;
 		background: transparent;
 	}
 
-	.nav--toggle-small .menu-toggle-icon {
+	button.nav-toggle .nav-toggle__icon {
 		display: block;
-		width: 25px;
-		height: 24px;
+		width: var(--nav-toggle-width);
+		height: var(--nav-toggle-height);
 		cursor: pointer;
 		position: relative;
 	}
 
-	.nav--toggle-small .menu-toggle-bar {
+	button.nav-toggle .nav-toggle__bar {
 		background: #fff;
 		position: absolute;
 		top: 0;
@@ -494,11 +407,11 @@ select {
 		transition: all 200ms ease-out;
 	}
 
-	.nav--toggle-small .menu-toggle-bar:first-child {
+	button.nav-toggle .nav-toggle__bar:first-child {
 		margin-top: 9px;
 	}
 
-	.nav--toggle-small .menu-toggle-bar:last-child {
+	button.nav-toggle .nav-toggle__bar:last-child {
 		margin-top: 18px;
 	}
 
@@ -506,29 +419,130 @@ select {
 		position: relative;
 	}
 
-	.site-header .site-branding {
+	.site-header .site-header-container button.nav-toggle {
+		grid-area: toggle;
+	}
+
+	.site-header .site-header-container .site-branding {
+		align-self: start;
 		padding-left: 1.5em;
+		grid-area: branding;
 	}
 
-	.main-navigation .menu-toggle {
-		position: absolute;
-		left: var(--grid-side-margin);
-		top: 4em;
+	.site-header .site-header-container {
+		grid-template-columns: var(--grid-side-margin-small) var(--nav-toggle-width) auto;
+		grid-template-areas:
+			". toggle branding"
+			"mainnav mainnav mainnav"
+			"secondarynav secondarynav secondarynav";
 	}
 
-	.nav--toggle-small.nav--toggled-on .menu {
+	.site-header.nav--toggled-on {
+		background: transparent;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		overflow: scroll;
+		color: inherit;
+		z-index: 10;
+	}
+
+	.site-header.nav--toggled-on button.nav-toggle .nav-toggle__bar {
+		opacity: 0;
+	}
+
+	.site-header.nav--toggled-on button.nav-toggle .nav-toggle__bar:first-child {
+		opacity: 1;
+		transform: rotate(45deg);
+	}
+
+	.site-header.nav--toggled-on button.nav-toggle .nav-toggle__bar:last-child {
+		opacity: 1;
+		margin-top: 9px;
+		transform: rotate(-45deg);
+	}
+
+	.site-header.nav--toggled-on .site-header-container {
+		background: var(--nyu-primary);
+		margin: 0;
+		color: #fff;
+		padding: 1em 0 0 0;
+		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
+	}
+
+	.site-header.nav--toggled-on nav a {
+		display: block;
+		padding: 0.5em 1.5em 0.5em 0;
+		border-bottom: 2px solid #c1c1c1;
+	}
+
+	body.nav-main--toggled-on {
+		overflow: hidden;
+	}
+
+	body.nav-main--toggled-on .secondary-navigation,
+	body.nav-main--toggled-on .secondary-navigation .menu {
 		display: block;
 	}
+
+	body.nav-main--toggled-on .secondary-navigation {
+		background: #fff;
+	}
+
+	.site-header .main-navigation,
+	.site-header .secondary-navigation {
+		display: none;
+	}
+
+	.site-header.nav--toggled-on .main-navigation {
+		display: block;
+		background: var(--nyu-primary);
+		margin: 1em 0 0 0;
+		border-top: 2px solid #fff;
+		grid-area: mainnav;
+	}
+
+	.site-header.nav--toggled-on nav.main-navigation a {
+		border-bottom-color: #8135a8;
+	}
+
+	.site-header.nav--toggled-on .secondary-navigation {
+		display: block;
+		grid-area: secondarynav;
+	}
+
+	body.nav-main--toggled-on .secondary-navigation,
+	.site-header.nav--toggled-on .main-navigation {
+		padding: 0.5rem 0 1.5rem var(--grid-side-margin-small);
+	}
+}
+
+.nav--toggle-sub .dropdown,
+.nav--toggle-sub .dropdown-toggle {
+	display: none;
 }
 
 @media (--wide-menu-query) {
 
-	.nav--toggle-small .menu-toggle {
+	.site-header {
+		padding: 2.25em 0;
+	}
+
+	.site-header .site-header-container {
+		grid-template-columns: auto auto;
+		margin: 0 var(--grid-side-margin);
+	}
+
+	.site-header .secondary-navigation {
 		display: none;
 	}
 
-	.nav--toggle-small .menu {
-		display: block;
+	.main-navigation__toggle--small {
+		display: none;
 	}
 
 	.nav--toggle-sub ul ul {
@@ -639,7 +653,7 @@ select {
 	}
 
 	.main-navigation {
-		flex: 1;
+		display: block;
 		font-size: 1.15em;
 		line-height: 1;
 	}
@@ -758,10 +772,6 @@ select {
 		padding-right: 0;
 	}
 	/* stylelint-enable */
-
-	.main-navigation ul ul ul {
-		font-style: italic;
-	}
 
 	.main-navigation .menu {
 		display: flex;
